--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ol>
             </section>
             
-        <img src=" https://www.pexels.com/photo/person-sitting-facing-laptop-computer-with-sketch-pad-57690/"
+        <img src=" Photo by Trinity  Kubassek from Pexels: https://www.pexels.com/photo/woman-holding-blue-smoke-flare-445109/"
         alt="Photo of Lifestyle">
         </main>
         <section id="about" class="section1">
